--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux-persist": "^6.0.0",
+    "victory": "^35.4.11",
     "yup": "^0.32.9"
   },
   "scripts": {
